--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .zig-cache/
 zig-out/
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# vscode
+.vscode*
+*.vsix
+.DS_Store
+
+#Jetbrains
+.idea/
+
